# sovereign-omni-tool

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  arsenal_dump.json  categorize_arsenal.py  fix_syntax.py  pyproject.toml  sov_mcp.py
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: main.rs
tools/: README.md
