[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sovereign-omni-tool-mcp"
version = "1.0.0"
description = "FastMCP server wrapper for the Sovereign Omni-Tool (`sov`) CLI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["mcp", "cli", "devtools", "llm", "sovereign"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Utilities",
]
dependencies = [
  "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/jimmychau1997/sovereign-omni-tool"
Repository = "https://github.com/jimmychau1997/sovereign-omni-tool"
"Bug Tracker" = "https://github.com/jimmychau1997/sovereign-omni-tool/issues"
Changelog = "https://github.com/jimmychau1997/sovereign-omni-tool/blob/main/CHANGELOG.md"

[project.scripts]
sov-mcp = "sov_mcp:main"

[tool.hatch.build.targets.wheel]
include = ["sov_mcp.py", "arsenal_dump.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
